presenters/menu/style.less
[hidden] {
	display: none;
}

.b-menu {
	--hoverBgd: var(--b-menu-hover-bgd, var(--theme-bgd-accent, rgba(0,0,0,.1)));
	--hoverTextColor: inherit;
	--checkboxColor: var(--b-menu-checkbox-color, #e10050);
	--checkboxColorHover: var(--checkboxColor);
	// padding: .25em 0;
	// font-size: 1.1em;
	display: flex;
    flex-direction: column;
	overflow: hidden;

	> header {
		padding: 1em;
		padding-bottom: 0;
	}

	> header[no-input] {
		padding: .75em 1em .25em;
	}

	.results {
		overflow: auto;
	}
	
	[heading] {
		padding: .75em 1em 0;
	}

	.menu-search-bar {
		flex-shrink: 0;
		display: flex;
		position: relative;
		// padding: .5em;
		font-size: var(--b-menu-input-font-size, 1.1rem);
		border-bottom: solid 1px var(--theme-bgd-accent);

		&[hidden] {
			padding: 0;
		}

		input {
			width: auto;
			flex: 1;
			min-width: 2em;
			box-shadow: none;
			border: none;
			background: transparent;
			// background: var(--b-menu-input-bgd, var(--theme-bgd-accent, #eee)) !important;
			color: var(--b-menu-input-color, var(--theme-text));
			font-size: 1em;
			// border-radius: var(--b-menu-input-radius, 30px);
			// font-size: var(--b-menu-input-font-size, 1.1rem);
			// padding-top: var(--b-menu-input-padding, .35em);
			// padding-bottom: var(--b-menu-input-padding, .35em);
			// padding-left: 1.8em;
			// padding-right: .5em;
			padding: .75em .5em .75em 2.3em;
			outline: none;
		}
		
		// b-spinner:not([hidden]) ~ input {
		// 	padding-right: 1.8em;
		// }

		input::placeholder {
			color: var(--b-menu-color-accent, rgba(var(--theme-text-rgb), .5));
		}

		b-icon {
			position: absolute;
			top: 50%;
			transform: translateY(-50%);
    		left: calc(~"1.1 * var(--b-menu-input-font-size, .75rem)");
		}

		b-spinner {
			position: absolute;
			right: .9em;
			top: 1em;
			padding-right: .1em;
			// background: rgba(238, 238, 238, .9);
		}
	}
	
	.menu-item {
		padding: .5em .75em;
		margin: .25em;
    	border-radius: 4px;
		transition: 120ms;
		display: flex;
		align-items: flex-start;
		position: relative;

		> b-icon:first-child,
		> check-box + b-icon,
		> .icon {
			margin: .1em .5em 0 -.15em;
		}

		> .icon {
			display: inline-block;
		}

		> .icon * {
			vertical-align: text-top;
		}

		[icon-only] > b-icon:first-child {
			margin: 0 -.25em;
		}

		> .mi-content {
			flex-grow: 1;
			min-width: 1em;
		}

		.mi-label {
			line-height: 1.2em;
		}

		.mi-label p:first-child { margin-top: 0; }
		.mi-label p:last-child { margin-bottom: 0; }

		.mi-description p:first-child { margin-top: 0; }
		.mi-description p:last-child { margin-bottom: 0; }

		.mi-description:empty {
			display: none;
		}

		.mi-description {
			font-size: .8em;
			line-height: 1.2em;
			color: var(--b-menu-description-color, rgba(var(--theme-text-rgb), .6));
		}
		
		[selected] {
			background: var(--hoverBgd);
			color: var(--hoverTextColor);
		}

		b-icon.has-menu {
			opacity: 0;
		}
		
		@media (hover){
		&:hover {
			background: var(--hoverBgd);
			color: var(--hoverTextColor);
			cursor: pointer;

			b-icon.has-menu {
				opacity: 1;
			}

			> check-box {
				--color: var(--checkboxColorHover) !important;
			}
		}
		}
		
		
		&[active],
		&.popover-open {
			background: var(--hoverBgd);
			color: var(--hoverTextColor);
			cursor: pointer;

			b-icon.has-menu {
				opacity: 1;
			}

			> check-box {
				--color: var(--checkboxColorHover) !important;
			}
		}

		@media (hover){
		&.hover-red:hover{ background: var(--red-700, red); color: #fff; }
		&.hover-orange:hover{ background: var(--orange-700, orange); color: #fff; }
		}
		// &[active] {
		// 	background: red !important;
		// }
		
		> check-box {
			--color: var(--checkboxColor) !important;
			margin: -.25em -.5em -.25em .15em;
			order: 2;
		}

		> select-field {
			order: 2;
			margin-left: .5em;
			margin-right: -.5em;
			color: var(--checkboxColor);
		}

		> select-field[value=""] {
			color: var(--b-menu-description-color, var(--theme-text-accent));
		}

		> .mi-content ~ * {
			margin-left: 1em;
		}

		> check-box:not([checked]) ~ .menu-item-extra.when-active {
			visibility: hidden;
		}

	} // .menu-item

	alphabet-jump-nav ~ .menu-item {
		padding-right: 2.4em;
	}
	
	.results > b-hr {
		margin: 0;
	}
	
	.menu-divider {
		// padding: .5em 1em;
		// border-bottom: rgba(0,0,0,.1);
		// font-weight: bold;
		padding: 1em 1em .25em 1.1em;
		font-weight: normal;
		font-size: .9em;
		border-top: solid 1px var(--b-hr-bgd, rgba(0,0,0,.1));
		color: var(--b-menu-color-accent, rgba(var(--theme-text-rgb), .5));
	}

	.menu-divider:first-child {
		border-top: none;
	}

	.menu-divider:last-child {
		padding-bottom: 1em;
	}
	
	.menu-text {
		padding: .5em 1em;
		// font-size: .9em;
		// line-height: 1.2em;
		// color: var(--b-menu-color-accent, rgba(var(--theme-text-rgb), .5));
		background: var(--theme-bgd-accent2, #eee);
		// font-style: italic;
	}
} // menu

.b-menu ~ .d-btns:empty {
	display: none;
}

b-dialog .b-menu .menu-item {
	padding-left: .5em;
	padding-right: .15em;
	margin-left: 0;
	margin-right: 0;
}

/*
	Presenters
*/

.b-menu.grid-2 .results {
	display: grid;
	grid-template-columns: 1fr 1fr;

	.menu-title,
	.menu-text,
	.menu-divider,
	hr {
		grid-column-start: 1;
    	grid-column-end: 3;
	}
}

.b-menu.grid-3 .results {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;

	.menu-title,
	.menu-text,
	.menu-divider,
	hr {
		grid-column-start: 1;
    	grid-column-end: 4;
	}
}

.b-menu.grid-4 .results {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr;

	.menu-title,
	.menu-text,
	.menu-divider,
	hr {
		grid-column-start: 1;
    	grid-column-end: 5;
	}
}

.b-menu.grid-centered .results {
	.menu-item {
		justify-self: center;
	}
}

